# from_sql_to_excel

./: .gitignore  README.md  const_config.py  crontab_instruction.txt  main.py  pyproject.toml
sql_queries/: first_query.sql  second_query.sql
src/: connect_to_db.py  connect_to_excel.py
